# odd_knapsack_problem

./: CMakeLists.txt  README.md  odd_knapsack_problem.cpp  read_input.cpp  read_input.h
data/: input.txt  input2.txt  output.txt  output2.txt
